--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "index.js",
   "scripts": {
     "nodemon": "node_modules/nodemon/bin/nodemon.js app.js",
+    "reset": "sqlite3 db/api.sqlite < db/migrate.sql",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
