--- a/package.json
+++ b/package.json
@@ -4,9 +4,10 @@
   "description": "",
   "main": "index.js",
   "scripts": {
+    "start": "node app.js",
     "nodemon": "node_modules/nodemon/bin/nodemon.js app.js",
     "reset": "sqlite3 db/api.sqlite < db/migrate.sql",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "sqlite3 db/test_api.sqlite < db/migrate.sql && NODE_ENV='test' node_modules/.bin/jest --coverage --detectOpenHandles"
   },
   "repository": {
     "type": "git",
@@ -28,6 +29,10 @@
     "sqlite3": "^4.0.6"
   },
   "devDependencies": {
-    "nodemon": "^1.18.10"
+    "chai": "^4.2.0",
+    "chai-http": "^4.2.1",
+    "jest": "^24.0.0",
+    "nodemon": "^1.18.10",
+    "supertest": "^4.0.2"
   }
 }
